--- a/ConvenienceStore/ConvenienceStore/ConvenienceStore.vcxproj.filters
+++ b/ConvenienceStore/ConvenienceStore/ConvenienceStore.vcxproj.filters
@@ -30,4 +30,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\Memo.txt">
+      <Filter>ソース ファイル</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
